Change to styles to fix an alignment issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -51,7 +51,7 @@ body {
 
 .image-wrap {
   margin-top: 20px;
-  margin-left: 389px;
+  margin-left: 480px;
 }
 
 .reflection .image-wrap {
